# xtauri

./: .gitignore  README.md  package.json
src/: App.svelte  AppHeader.svelte  AppMain.svelte  Login.svelte  Term.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: command.rs  main.rs  settings.rs  ssh.rs
src/assets/: data.js
src/js/: store.js
src/lib/: Greet.svelte  Rename.svelte  Spinner.svelte
src/views/: App.svelte  Login.svelte  Term.svelte
src/views/layout/: AppFooter.svelte  AppHeader.svelte  AppMain.svelte
