[package]
name = "xtauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.4"
confy = "0.6"
dirs = "5.0"
chrono = "0.4"
tokio = { version = "1.38", features = ["full", "mio"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"
mio = { version = "0.8.11", features = ["os-poll", "os-ext", "net"] }
polling = "3.7.1"
system-deps = "6.2.2"
# flume = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
