[package]
name = "xtauri"
version = "1.0.0"
description = "A Tauri Xterm"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.4"
confy = "0.6"
dirs = "5.0"
chrono = "0.4"
tokio = { version = "1.38", features = ["full", "mio"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"
mio = { version = "1.0.2", features = ["os-poll", "os-ext", "net"] }
polling = "3.7.1"
system-deps = "7.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
